# image_text_enhancer

./: .clang-format  .gitignore  .gitmodules  .pre-commit-hook  CMakeLists.txt  Optimizations.txt  README.md
paper/: literature.bib  paper.aux  paper.fdb_latexmk  paper.fls  paper.out  paper.tex  paper_old.tex  paper_v1.tex
paper/graphics/: bench_1_main.csv  bench_1_optimized.csv  bench_8_main.csv  bench_8_optimized.csv  bench_strong_main_2k.csv  bench_strong_main_8k.csv  bench_strong_no-copy_2k.csv  bench_strong_no-copy_8k.csv  bench_strong_optimized_16k.csv  bench_strong_optimized_2k.csv  bench_strong_optimized_8k.csv  bench_summary.csv
resources/test_images/: sources.md
scripts/: estimate.py  parse_bench_logs.py
src/: CMakeLists.txt  cli.cpp  main.cpp
src/lib/: CMakeLists.txt  DummyLibrary.cpp  DummyLibrary.hpp  ite.cpp  ite.h
src/lib/binarization/: binarization.cpp  binarization.h
src/lib/color/: color.cpp  color.h  contrast.cpp  contrast.h  grayscale.cpp  grayscale.h
src/lib/core/: integral_image.cpp  integral_image.h  types.h  utils.h
src/lib/filters/: filters.cpp  filters.h
src/lib/geometry/: geometry.cpp  geometry.h
src/lib/io/: image_io.cpp  image_io.h
src/lib/morphology/: morphology.cpp  morphology.h
tests/: CMakeLists.txt  DummyLibrary_Tests.cpp  bench.sh  grid_search.py  ite.binarize.tests.cpp  ite.binarize_adaptive.tests.cpp  ite.contrast.tests.cpp  ite.denoise.tests.cpp  ite.deskew.tests.cpp  ite.dilation.tests.cpp  ite.erosion.tests.cpp  ite.tests.cpp  strong_scaling_bench.sh  test_cli.sh
tests/binarization/: ite.binarize.tests.cpp
tests/color/: ite.color_pass.tests.cpp  ite.contrast.tests.cpp  ite.grayscale.tests.cpp
tests/filters/: ite.adaptive_gaussian.tests.cpp  ite.adaptive_median.tests.cpp  ite.denoise.tests.cpp  ite.despeckle.tests.cpp  ite.simple_gaussian.tests.cpp
tests/geometry/: ite.deskew.tests.cpp
tests/morphology/: ite.dilation.tests.cpp  ite.erosion.tests.cpp
wasm_demo/: .gitignore  CImg.h  Makefile  Makefile.openmp  README.md  build.sh  build_openmp_emscripten.sh  index.html  main.js  patch_cimg.py  serve.py  simple_cimg_blur.cpp  simple_cimg_blur.h  simple_cimg_blur_optimized.cpp  test_shared_memory_capability.cpp  wasm_bridge.cpp
